# PaperScout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: configs.example.yaml  tags.example.yaml  venues.example.yaml
docs/: paper-analysis-prompt.md
skills/paper-analysis/: SKILL.md
skills/paper-analysis/references/: feedback-guide.md  output-contracts.md  profile-workflow.md  rubric-guide.md
src/paper_scout/: main.py  pipeline.py
src/paper_scout/core/: config.py  constant.py  http_client.py  logger.py
src/paper_scout/database/: crud.py  database.py  model.py
src/paper_scout/service/: analyzer.py  exporter.py  fetcher.py  filter.py  importer.py  parser.py  uploader.py
