[project]
name = "paper_scout"
version = "0.4.1"
description = "Smart automated agent for tracking, fetching, and summarizing academic papers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心架构
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    # LLM与结构化输出
    "instructor>=1.0.0",
    "openai>=1.0.0",
    # 网络请求与解析
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",  # bs4的xml解析引擎
    "ratelimit>=2.2.1",  # api限流
    "requests>=2.31.0",
    # 外部服务
    "pyzotero>=1.5.0",
    # 工具
    "pyyaml>=6.0.0",
    "tqdm>=4.67.3",
]

[project.scripts]
# 配置命令行入口, 支持直接运行paper_scout和uv run paper_scout
paper_scout = "paper_scout.main:main"

[dependency-groups]
# 开发与测试依赖
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_scout"]
